--- a/src/components/CardComponent/card.module.scss
+++ b/src/components/CardComponent/card.module.scss
@@ -1,9 +1,39 @@
 @use '../variables' as *;
 
-.cardWord {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    border: 1px $secondary-color;
-    border-radius: 3%;
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50vw;
+  border: 1px solid $secondary-color;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  margin: 10px auto; 
+  position: relative;
+  overflow: hidden; 
+}
+
+.word {
+  font-size: $heading-font-size; 
+  margin: 10px;
+  color: $secondary-color;
+}
+
+.wordOptions {
+  font-size: $base-font-size;
+  color: $secondary-color;
+  margin: 5px;
+}
+
+.topic {
+  font-size: $base-font-size;
+  color: $secondary-color;
+  position: absolute;
+  top: 0; 
+  left: 0; 
+  background-color: $background-color; 
+  padding: 5px 10px; 
+  border-bottom-right-radius: 10px; 
 }
