--- a/src/components/HeaderComponent/header.module.css
+++ b/src/components/HeaderComponent/header.module.css
@@ -1,1 +1,71 @@
-/*# sourceMappingURL=header.module.css.map */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 40px;
+  background: linear-gradient(135deg, #ff93d4, #7d2e5d);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  color: white;
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.logo h1 {
+  margin: 0;
+  font-size: 2.5em;
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.logo p {
+  margin: 5px 0 20px 0;
+  font-size: 1.2em;
+  color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.logo a {
+  margin-right: 10px;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 8px 16px;
+  border: 2px solid white;
+  border-radius: 20px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.logo a:hover {
+  background-color: white;
+  color: #7d2e5d;
+}
+
+.nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+li {
+  margin-left: 20px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2em;
+  padding: 8px 16px;
+  border-radius: 20px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.nav ul li a:hover {
+  background-color: white;
+  color: #7d2e5d;
+}/*# sourceMappingURL=header.module.css.map */
