--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -8,5 +8,5 @@ $font-stack: 'Helvetica Neue', sans-serif;
 $heading-font: 'Arial', sans-serif;
 
 // Размеры
-$base-font-size: 16px;
-$heading-font-size: 24px;
+$base-font-size: 1.2em;
+$heading-font-size: 2.5em;
