--- a/src/components/list/list.module.css
+++ b/src/components/list/list.module.css
@@ -1,1 +1,24 @@
+.tableWrapper {
+  width: 100vw;
+  padding: 20px 0 20px 0;
+  overflow-x: auto;
+  margin: 0 auto;
+}
+
+.tableHeader {
+  font-size: 1.8rem;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+  margin: 0 auto;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+}
+
 /*# sourceMappingURL=list.module.css.map */
