--- a/src/components/CardList/cardList.module.css
+++ b/src/components/CardList/cardList.module.css
@@ -1,1 +1,8 @@
+.cardList {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-around;
+}
+
 /*# sourceMappingURL=cardList.module.css.map */
