--- a/src/components/list/list.module.css
+++ b/src/components/list/list.module.css
@@ -6,13 +6,14 @@
 }
 
 .tableHeader {
-  font-size: 1.8rem;
   text-align: center;
   margin-bottom: 20px;
   color: #333;
+  font-size: 2em;
 }
 
 .table {
+  font-size: 1.3em;
   width: 100%;
   border-collapse: collapse;
   table-layout: fixed;
